--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-design-and-components-starter",
+  "name": "design",
   "version": "1.0.0",
   "description": "",
   "keywords": [],
