--- a/package.json
+++ b/package.json
@@ -1,17 +1,16 @@
 {
-  "name": "react-design-and-components-starter",
-  "version": "1.0.0",
+  "name": "design",
+  "version": "0.0.1",
   "description": "",
   "keywords": [],
   "main": "src/index.js",
   "dependencies": {
-    "react": "16.5.2",
-    "react-dom": "16.5.2",
-    "react-scripts": "2.0.3"
+    "react": "^16.8.2",
+    "react-dom": "^16.8.6",
+    "react-scripts": "3.0.0"
   },
-  "devDependencies": {
-    "babel-eslint": "^10.0.1",
-    "eslint": "^5.16.0"
+  "eslintConfig": {
+    "extends": "react-app"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -24,6 +23,11 @@
     "not dead",
     "not ie <= 11",
     "not op_mini all"
+  ],
+  "development": [
+    "last 1 chrome version",
+    "last 1 firefox version",
+    "last 1 safari version"
   ],
   "repository": {
     "type": "git",
