--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "react-dom": "^16.8.6",
     "react-scripts": "3.0.0"
   },
+  "devDependencies": {
+    "node-sass": "^4.11.0"
+  },
   "eslintConfig": {
     "extends": "react-app"
   },
@@ -18,17 +21,8 @@
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
   },
-  "browserslist": [
-    ">0.2%",
-    "not dead",
-    "not ie <= 11",
-    "not op_mini all"
-  ],
-  "development": [
-    "last 1 chrome version",
-    "last 1 firefox version",
-    "last 1 safari version"
-  ],
+  "browserslist": [">0.2%", "not dead", "not ie <= 11", "not op_mini all"],
+  "development": ["last 1 chrome version", "last 1 firefox version", "last 1 safari version"],
   "repository": {
     "type": "git",
     "url": "git+https://github.com/charmedsatyr-401-advanced-javascript/design.git"
@@ -38,8 +32,5 @@
   "bugs": {
     "url": "https://github.com/charmedsatyr-401-advanced-javascript/design/issues"
   },
-  "homepage": "https://github.com/charmedsatyr-401-advanced-javascript/design#readme",
-  "devDependencies": {
-    "node-sass": "^4.11.0"
-  }
+  "homepage": "https://design-challenges.netlify.com"
 }
