--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -12,7 +12,7 @@
     "res": true,
     "next": true
   },
-  "extends": "eslint:recommended",
+  "extends": "react-app",
   "parser": "babel-eslint",
   "parserOptions": {
     "sourceType": "module"
