--- a/package.json
+++ b/package.json
@@ -1,33 +1,28 @@
 {
   "name": "design",
-  "version": "0.0.1",
-  "description": "",
-  "keywords": [],
-  "main": "src/index.js",
+  "version": "0.1.0",
+  "private": true,
   "dependencies": {
-    "react": "^16.8.2",
+    "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-scripts": "3.0.0"
-  },
-  "devDependencies": {
-    "node-sass": "^4.11.0"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "test": "react-scripts test",
+    "eject": "react-scripts eject",
+    "lint": "eslint '**/*.js'"
   },
-  "browserslist": [">0.2%", "not dead", "not ie <= 11", "not op_mini all"],
-  "development": ["last 1 chrome version", "last 1 firefox version", "last 1 safari version"],
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/charmedsatyr-401-advanced-javascript/design.git"
+  "eslintConfig": {
+    "extends": "react-app"
   },
-  "author": "CharmedSatyr <z@charmed.tech>",
-  "license": "GPL-3.0-or-later",
-  "bugs": {
-    "url": "https://github.com/charmedsatyr-401-advanced-javascript/design/issues"
+  "browserslist": {
+    "production": [">0.2%", "not dead", "not op_mini all"],
+    "development": ["last 1 chrome version", "last 1 firefox version", "last 1 safari version"]
   },
-  "homepage": "https://design-challenges.netlify.com"
+  "devDependencies": {
+    "node-sass": "^4.11.0"
+  },
+  "homepage": "https://www.design-challenges.netlify.com"
 }
